# Rust_API

./: Cargo.toml  \  log4rs.yaml  logs.txt  passos.md
src/: account.rs  client.rs  error.rs  get_response.rs  main.rs  response.rs  route.rs  server.rs  storage.rs  structs.rs
