[package]
name = "juntos_rust"
version = "0.1.0"
edition = "2021"
author = "flooijdt"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "*", features = ["blocking"] }
serde_json = "*"
csv = "*"
serde = { version = "1.0.138", features = ["derive"] }
tuple = "*"
json = "*"
tokio = {version = "*", features = ["full"]}
warp = "*"
futures = "*"
csv2json = "*"
uuid = { version = "*", features = ["v4"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
